...
    // return Container(
    return Scaffold(
        resizeToAvoidBottomInset: false,
        backgroundColor: Colors.black,
        appBar: AppBar(
          backgroundColor: Colors.black,
          title: const Text('เลือกตำแหน่งที่อยู่'),
          actions: <Widget>[
            Padding(
              padding: const EdgeInsets.fromLTRB(0, 8, 20, 8),
              child: InkWell(
                  onTap: _isFetchingLocation ? null : _onPressedRefreshUserLoc,
                  child: _isFetchingLocation
...
